product page content alignment fix

--- a/src/screens/Product/Product.module.scss
+++ b/src/screens/Product/Product.module.scss
@@ -49,7 +49,11 @@
 }
 
 .textContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     @include smMax {
+        display: block;
         margin-top: 80px;
     }
 }
